feat:(paymessage): add on holding stage
