# swagger.yaml
@@ -570,6 +570,59 @@ paths:
           description: Contrato creado exitosamente
         '400':
           description: Datos no válidos
+  /paymail/holding:
+    get:
+      tags:
+        - paymail
+      summary: show mail
+      description: Ver tramites en mesa de partes
+      parameters:
+        - $ref: '#/components/parameters/onHolding'
+        - $ref: '#/components/parameters/officeIdQuery'
+        - $ref: '#/components/parameters/skip'
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Operación exitosa
+          content:
+            application/json:
+              example:
+                message: Trámite creado exitosamente
+        '404':
+          description: No se pudo crear el mensaje
+          content:
+            application/json:
+              example:
+                error: No se pudo crear el mensaje
+    # put:
+    #   tags:
+    #     - paymail
+    #   summary: edit mail
+    #   description: Editar trámites rechazados
+    #   parameters:
+    #     - $ref: '#/components/parameters/mailId'
+    #   security:
+    #     - bearerAuth: []
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       multipart/form-data:
+    #         schema:
+    #           $ref: '#/components/schemas/mail_form_reply'
+    #   responses:
+    #     '200':
+    #       description: Operación exitosa
+    #       content:
+    #         application/json:
+    #           example:
+    #             message: Trámite Existe
+    #     '404':
+    #       description: No se pudo encontrar el mensaje
+    #       content:
+    #         application/json:
+    #           example:
+    #             error: No se pudo encontrar el mensaje
   /mail:
     post:
       tags:
@@ -1289,6 +1342,24 @@ components:
       description: Usar las siguientes variables <b>[GLOBAL, DIRECT]</b>
       schema:
         type: string
+    onHolding:
+      name: onHolding
+      in: query
+      description: tramites que estan en mesa de partes
+      schema:
+        type: boolean
+    officeIdQuery:
+      name: officeId
+      in: query
+      description: tramites filtrados por oficina
+      schema:
+        type: number
+    skip:
+      name: skip
+      in: query
+      description: saltos de registros
+      schema:
+        type: number
   schemas:
     Login:
       required:
